// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-noformat-pragma.yml - {"checkIgnorePragma":true} format 1`] = `
====================================options=====================================
checkIgnorePragma: true
parsers: ["yaml"]
                                                      printWidth: 80 (default) |
=====================================input======================================
# @noformat

    123

=====================================output=====================================
# @noformat

    123

================================================================================
`;

exports[`with-noprettier-pragma.yml - {"checkIgnorePragma":true} format 1`] = `
====================================options=====================================
checkIgnorePragma: true
parsers: ["yaml"]
                                                      printWidth: 80 (default) |
=====================================input======================================
# @noprettier

    123

=====================================output=====================================
# @noprettier

    123

================================================================================
`;

exports[`without-pragma.yml - {"checkIgnorePragma":true} format 1`] = `
====================================options=====================================
checkIgnorePragma: true
parsers: ["yaml"]
                                                      printWidth: 80 (default) |
=====================================input======================================


    123

=====================================output=====================================
123

================================================================================
`;
